--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -38,4 +38,8 @@
     padding-top: 8px;
     padding-bottom: 8px;
   }
+
+  .clear {
+    transform: initial;
+  }
 }
